fixing missing background on login and sign in

--- a/project/src/css/style.css
+++ b/project/src/css/style.css
@@ -369,7 +369,7 @@ li {
 }
 
 .telaLogin {
-    background-image: url("../img/Decoração.svg");
+    background-image: url("../../img/Decoração.svg");
     background-size: cover;
     background-repeat: no-repeat;
 }
